--- a/Day-2/main.css
+++ b/Day-2/main.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
 }
@@ -21,7 +21,6 @@
     bottom: 10%;
     left: 50%;
     margin-left: -200px;
-    /* background-color: darkgray; */
     color: white;
 }
 
@@ -29,4 +28,34 @@
  width: 0;
  height: 5px;
  background-color: green;
+} */
+
+
+*{
+    margin:0;
+    padding: 0;
+}
+#loader{
+    background-color: black;
+    width: 100%;
+    height:100%;
+    position: fixed;
+    top:0;
+    left:0;
+    align-content: center;
+    text-align: center;
+}
+#barContainer{
+    position:absolute;
+    height:50px;
+    width:200px;
+    bottom:10%;
+    left:50%;
+    margin-left:-100px;
+    color:white;
+}
+#bar{
+    width:0;
+    height:5px;
+    background-color: green;
 }
